<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:background="@color/babyBlue"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
                <TextView
                    style="@style/itemListView"
                    android:text="@string/quantidade"
                    />
                <TextView
                    style="@style/ListPadding"
                    android:text="@string/_1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:id="@+id/textQtd"
                   />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
                <TextView
                    style="@style/itemListView"
                    android:text="@string/nome_do_produto"
                    android:id="@+id/txtProduto"/>
                <TextView
                    style="@style/ListPadding"
                    android:text="@string/valor_da_unidade"
                    android:id="@+id/valorProdutoUnitario"
                    android:textColor="@color/MainRed"/>
                <TextView
                    style="@style/ListPadding"
                    android:text="@string/subtotal"
                    android:id="@+id/txtvalor"
                    android:textColor="@color/MainRed"/>
        </LinearLayout>
</LinearLayout>